--- a/src/app/admin/orders/components/new-order/new-order.component.html
+++ b/src/app/admin/orders/components/new-order/new-order.component.html
@@ -195,7 +195,47 @@
                                 <input type="checkbox" id="t1s4">
                                 <label for="t1s4"></label>
                             </div>
-                        </div>
+                          </div>
+                          <div class="radio_outer px-1">
+                            <div class="table_seat_checkBox horizontal">
+                                <input type="checkbox" id="t1s3">
+                                <label for="t1s3"></label>
+                            </div>
+                            <div class="table_seat_checkBox horizontal">
+                                <input type="checkbox" id="t1s4">
+                                <label for="t1s4"></label>
+                            </div>
+                          </div>
+                          <div class="radio_outer px-1">
+                            <div class="table_seat_checkBox horizontal">
+                                <input type="checkbox" id="t1s3">
+                                <label for="t1s3"></label>
+                            </div>
+                            <div class="table_seat_checkBox horizontal">
+                                <input type="checkbox" id="t1s4">
+                                <label for="t1s4"></label>
+                            </div>
+                          </div>
+                          <div class="radio_outer px-1">
+                            <div class="table_seat_checkBox horizontal">
+                                <input type="checkbox" id="t1s3">
+                                <label for="t1s3"></label>
+                            </div>
+                            <div class="table_seat_checkBox horizontal">
+                                <input type="checkbox" id="t1s4">
+                                <label for="t1s4"></label>
+                            </div>
+                          </div>
+                          <div class="radio_outer px-1">
+                            <div class="table_seat_checkBox horizontal">
+                                <input type="checkbox" id="t1s3">
+                                <label for="t1s3"></label>
+                            </div>
+                            <div class="table_seat_checkBox horizontal">
+                                <input type="checkbox" id="t1s4">
+                                <label for="t1s4"></label>
+                            </div>
+                          </div>
                       </div>
                   </div>
               </div>
