--- a/src/app/admin/settings/categories-setting/categories-setting.component.html
+++ b/src/app/admin/settings/categories-setting/categories-setting.component.html
@@ -10,14 +10,14 @@
     <table mat-table [dataSource]="dataSource?.data" matSort class="w-100">
         <!-- Position Column -->
         <ng-container matColumnDef="action">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header class="ew-100"> Action </th>
+            <th mat-header-cell *matHeaderCellDef class="ew-100"> Action </th>
             <td mat-cell *matCellDef="let element"> 
                 <button mat-icon-button [matMenuTriggerFor]="moreOption">
                     <mat-icon>more_vert</mat-icon>
                 </button>
                     <mat-menu #moreOption="matMenu">
                     <button mat-menu-item type="button" (click)="updateCategory(element)"><mat-icon>create</mat-icon> Edit</button>
-                    <button mat-menu-item><mat-icon>delete</mat-icon>Delete</button>
+                    <button mat-menu-item type="button" (click)="deleteCategory(element)"><mat-icon>delete</mat-icon>Delete</button>
                 </mat-menu>
             </td>
         </ng-container>
@@ -33,7 +33,7 @@
         </ng-container>
 
         <ng-container matColumnDef="branch">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Branch </th>
+            <th mat-header-cell *matHeaderCellDef> Branch </th>
             <td mat-cell *matCellDef="let element"> {{element.branch?.branchTitle}} </td>
         </ng-container>
         
