--- a/src/app/admin/products/components/add-product/add-product.component.html
+++ b/src/app/admin/products/components/add-product/add-product.component.html
@@ -88,12 +88,12 @@
             
                     <!-- Name Column -->
                     <ng-container matColumnDef="ordertype">
-                        <th mat-header-cell *matHeaderCellDef mat-sort-header class="ew-200">Order Type</th>
+                        <th mat-header-cell *matHeaderCellDef class="ew-200">Order Type</th>
                         <td mat-cell *matCellDef="let element; let i=index;"  [formGroupName]="i"> {{element.get('orderTypeName').value}} </td>
                     </ng-container>
             
                     <ng-container matColumnDef="price">
-                        <th mat-header-cell *matHeaderCellDef mat-sort-header>Price</th>
+                        <th mat-header-cell *matHeaderCellDef>Price</th>
                         <td mat-cell *matCellDef="let element; let i=index;"  [formGroupName]="i">
                             <mat-form-field appearance="outline" class="w-100 pb-0 ew-mx-200 mr-20">
                                 <input matInput formControlName="price" type="text">
@@ -102,7 +102,7 @@
                     </ng-container>
             
                     <ng-container matColumnDef="taxPercent">
-                        <th mat-header-cell *matHeaderCellDef mat-sort-header>Tax</th>
+                        <th mat-header-cell *matHeaderCellDef>Tax</th>
                         <td mat-cell *matCellDef="let element; let i=index;"  [formGroupName]="i">
                             <mat-form-field appearance="outline" class="w-100 pb-0 ew-mx-200 mr-20">
                                 <input matInput formControlName="taxPercent" type="text">
@@ -111,7 +111,7 @@
                     </ng-container>
             
                     <ng-container matColumnDef="packagingCharges">
-                        <th mat-header-cell *matHeaderCellDef mat-sort-header>Packaging Charges</th>
+                        <th mat-header-cell *matHeaderCellDef>Packaging Charges</th>
                         <td mat-cell *matCellDef="let element; let i=index;"  [formGroupName]="i">
                             <mat-form-field appearance="outline" class="w-100 pb-0 ew-mx-200 mr-20">
                                 <input matInput formControlName="packagingCharges" type="text">
