--- a/src/app/admin/products/products.component.html
+++ b/src/app/admin/products/products.component.html
@@ -9,7 +9,7 @@
     <form>
         <mat-form-field  appearance="outline" class="ew-250 pb-0">
             <mat-label>Search</mat-label>
-            <input (keyup)="applyFilter($event)" #search type="text" matInput>
+            <input [formControl]="filterForm.get('searchString')" type="text" matInput>
             <mat-icon matSuffix>search</mat-icon>
         </mat-form-field>
     </form>
@@ -19,14 +19,14 @@
     <table mat-table [dataSource]="dataSource?.data" matSort class="w-100">
         <!-- Position Column -->
         <ng-container matColumnDef="action">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header class="ew-100"> Action </th>
+            <th mat-header-cell *matHeaderCellDef class="ew-100"> Action </th>
             <td mat-cell *matCellDef="let element"> 
                 <button mat-icon-button [matMenuTriggerFor]="moreOption">
                     <mat-icon>more_vert</mat-icon>
                 </button>
                     <mat-menu #moreOption="matMenu">
                     <button mat-menu-item type="button" [routerLink]="['/admin/products/update/'+element.id]"><mat-icon>create</mat-icon> Edit</button>
-                    <button mat-menu-item><mat-icon>delete</mat-icon> Delete</button>
+                    <button mat-menu-item type="button" (click)="deleteProduct(element)"><mat-icon>delete</mat-icon> Delete</button>
                 </mat-menu>
             </td>
         </ng-container>
@@ -47,7 +47,7 @@
         </ng-container>
 
         <ng-container matColumnDef="branch">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Branch </th>
+            <th mat-header-cell *matHeaderCellDef> Branch </th>
             <td mat-cell *matCellDef="let element"> {{ element.branch?.branchTitle }} </td>
         </ng-container>
 
