--- a/src/app/admin/settings/order-setting/order-setting.component.html
+++ b/src/app/admin/settings/order-setting/order-setting.component.html
@@ -8,14 +8,14 @@
     <table mat-table [dataSource]="dataSource?.data" matSort class="w-100">
     
         <ng-container matColumnDef="action">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header class="ew-100"> Action </th>
+            <th mat-header-cell *matHeaderCellDef class="ew-100"> Action </th>
             <td mat-cell *matCellDef="let element"> 
                 <button mat-icon-button [matMenuTriggerFor]="moreOption">
                     <mat-icon>more_vert</mat-icon>
                 </button>
-                    <mat-menu #moreOption="matMenu" yPosition="above">
+                    <mat-menu #moreOption="matMenu">
                     <button mat-menu-item type="button" [routerLink]="['/admin/settings/order-type/update/'+element.id]"><mat-icon>create</mat-icon> Edit</button>
-                    <button mat-icon-button><mat-icon>delete</mat-icon> Delete</button>
+                    <button mat-menu-item type="button" (click)="deleteOderType(element)"><mat-icon>delete</mat-icon> Delete</button>
                 </mat-menu>
             </td>
         </ng-container>
@@ -31,7 +31,7 @@
         </ng-container>
 
         <ng-container matColumnDef="branch">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header class="ew-150"> Branch </th>
+            <th mat-header-cell *matHeaderCellDef class="ew-150"> Branch </th>
             <td mat-cell *matCellDef="let element"> {{element.branch.branchTitle }} </td>
         </ng-container>
 
@@ -45,5 +45,5 @@
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
-    <mat-paginator  [pageSizeOptions]="[10]" [length]="dataSource?.total" [pageSize]="10" (page)="getOrderTypes($event.pageIndex+1)"></mat-paginator>
+    <mat-paginator  [pageSizeOptions]="[10]" [length]="dataSource?.total" [pageSize]="10"></mat-paginator>
 </div>
