--- a/src/app/admin/orders/orders.component.html
+++ b/src/app/admin/orders/orders.component.html
@@ -1,70 +1,58 @@
 <div class="page_header d-flex mb-4">
     <h2 class="header_title">Orders</h2>
     <div class="ml-auto">
-        <button mat-raised-button color="primary" routerLink="/admin/order/new">Add New</button>
+        <mat-form-field appearance="outline" class="mr-10 pb-0">
+            <mat-label>Search</mat-label>
+            <input matInput placeholder="Placeholder">
+            <mat-icon matSuffix>search</mat-icon>
+        </mat-form-field>
+        <button mat-raised-button class="mr-10" color="primary" routerLink="/admin/order/new">Add New</button>
+        <button mat-mini-fab color="primary" (click)="filterOn = !filterOn" class="ml-auto">
+            <mat-icon>filter_list</mat-icon>
+        </button>
     </div>
 </div>
-
-<div class="search_outerWrapper">
-    <div class="row">
-        <div class="col">
-            <div class="row gutters-10">
-                <div class="col-md-4">
-                    <mat-form-field appearance="outline" class="w-100 pb-0">
-                        <mat-label>Search</mat-label>
-                        <input matInput placeholder="Placeholder">
-                    </mat-form-field>
-                </div>
-                <div class="col-md-4">
-                    <mat-form-field appearance="outline" class="w-100 pb-0">
-                        <mat-label>Status</mat-label>
-                        <mat-select>
-                            <mat-option value="option">Option</mat-option>
-                        </mat-select>
-                    </mat-form-field>
-                </div>
-
-                <div class="col-md-4">
-                    <mat-form-field appearance="outline" class="w-100 pb-0">
-                        <mat-label>Order Type</mat-label>
-                        <mat-select>
-                            <mat-option value="option">Option</mat-option>
-                        </mat-select>
-                    </mat-form-field>
-                </div>
-                <ng-container *ngIf="filterOn">
-                    <div class="col-md-4">
-                        <mat-form-field appearance="outline" class="w-100 pb-0">
-                            <mat-label>Date range</mat-label>
-                            <mat-date-range-input [rangePicker]="picker">
-                                <input matStartDate placeholder="Start date">
-                                <input matEndDate placeholder="End date">
-                            </mat-date-range-input>
-                            <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-                            <mat-date-range-picker #picker></mat-date-range-picker>
-                        </mat-form-field>
-                    </div>
-                    <div class="col-md-4">
-                        <mat-form-field appearance="outline" class="w-100 pb-0">
-                            <mat-label>Category</mat-label>
-                            <mat-select>
-                                <mat-option value="option">Option</mat-option>
-                            </mat-select>
-                        </mat-form-field>
-                    </div>
-                </ng-container>
+<mat-card *ngIf="filterOn">
+    <div class="search_outerWrapper">
+        <div class="row gutters-10">
+            <div class="col-lg-3 col-md-4 col-sm-6 col-12">
+                <mat-form-field appearance="outline" class="w-100 pb-0">
+                    <mat-label>Status</mat-label>
+                    <mat-select>
+                        <mat-option value="option">Option</mat-option>
+                    </mat-select>
+                </mat-form-field>
+            </div>
+            <div class="col-lg-3 col-md-4 col-sm-6 col-12">
+                <mat-form-field appearance="outline" class="w-100 pb-0">
+                    <mat-label>Order Type</mat-label>
+                    <mat-select>
+                        <mat-option value="option">Option</mat-option>
+                    </mat-select>
+                </mat-form-field>
+            </div>
+            <div class="col-lg-3 col-md-4 col-sm-6 col-12">
+                <mat-form-field appearance="outline" class="w-100 pb-0">
+                    <mat-label>Date range</mat-label>
+                    <mat-date-range-input [rangePicker]="picker">
+                        <input matStartDate placeholder="Start date">
+                        <input matEndDate placeholder="End date">
+                    </mat-date-range-input>
+                    <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                    <mat-date-range-picker #picker></mat-date-range-picker>
+                </mat-form-field>
+            </div>
+            <div class="col-lg-3 col-md-4 col-sm-6 col-12">
+                <mat-form-field appearance="outline" class="w-100 pb-0">
+                    <mat-label>Category</mat-label>
+                    <mat-select>
+                        <mat-option value="option">Option</mat-option>
+                    </mat-select>
+                </mat-form-field>
             </div>
         </div>
-        <div class="col-auto align-items-center pt-10">
-            <button mat-button color="primary" class="mr-15 font-bold">
-                <mat-icon class="mr-2">search</mat-icon>Search
-            </button>
-            <button mat-mini-fab color="primary" (click)="filterOn = !filterOn" class="ml-auto">
-                <mat-icon>filter_list</mat-icon>
-            </button>
-        </div>
     </div>
-</div>
+</mat-card>
 
 <div class="table_outerWrapper mat-elevation-z2 mt-20">
     <table mat-table [dataSource]="dataSource" matSort class="w-100">
