--- a/src/styles.scss
+++ b/src/styles.scss
@@ -299,14 +299,15 @@ mat-form-field{
             width: 23px;
 
             & .mat-slide-toggle-thumb-container {
-                height: 10px;
-                width: 10px;
-                top: 1px;
+                height: 8px;
+                width: 8px;
+                top: 3px;
                 left: 2px;
 
                 & .mat-slide-toggle-thumb {
-                    width: 10px;
-                    height: 10px;
+                    width: 8px;
+                    height: 8px;
+                    box-shadow: none;
                 }
             }
         }
