--- a/src/app/admin/layout/header/header.component.html
+++ b/src/app/admin/layout/header/header.component.html
@@ -3,7 +3,10 @@
         <button type="button" mat-icon-button (click)="_layout.isOpened = !_layout.isOpened">
             <mat-icon>menu</mat-icon>
         </button>
-        <span>Resto App</span>
+        <span>
+            <img src="assets/images/logo.png" class="logoImg" alt="">
+        </span>
+        <!-- <span>Resto App</span> -->
         <div class="header_navigation">
             <ul>
                 <li>
