--- a/src/app/admin/settings/add-order-type/add-order-type.component.html
+++ b/src/app/admin/settings/add-order-type/add-order-type.component.html
@@ -108,7 +108,7 @@
             </div>
             <div class="col-12">
                 <div class="d-flex align-items-center mb-20">
-                    <p class="my-0 mr-20">Disable for now</p>
+                    <p class="my-0 mr-20">Is Active?</p>
                     <mat-slide-toggle></mat-slide-toggle>
                 </div>
             </div>
